Feat: Migrate to Java 25, Realign Virtual Threads and Restore TornadoVM GPU Resident Pool Driver